# ghpypi

./: pyproject.toml
docs/: index.html
docs/pypi/ghpypi/: json
docs/pypi/testrepo/: json
docs/simple/ghpypi/: index.html
docs/simple/testrepo/: index.html
src/ghpypi/: __init__.py  ghpypi.py
tests/: test_main.py
