[project]
name = "ghpypi"
version = "0.0.0"
description = "A custom package index generator."
authors = [{ name = "Paul Lockaby", email = "paul@paullockaby.com" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "aiohttp>=3.9.1",
    "distlib>=0.4.0",
    "Jinja2>=3.1.2",
    "packaging>=25.0",
    "atomicwrites>=1.4.1",
]
license-files = ["LICENSE"]

[project.scripts]
ghpypi = "ghpypi:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.11.1",
    "pytest-mypy>=1.0.1",
    "types-requests>=2.31.0.8",
    "types-atomicwrites>=1.4.5.1",
    "responses>=0.25.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/ghpypi"]

[tool.hatch.build.targets.wheel]
include = ["src/ghpypi"]

[tool.hatch.build.targets.wheel.sources]
"src/ghpypi" = "ghpypi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
